# easy-commerce-backend

./: .env.ci  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  tasks.py
.github/workflows/: django.yml
backend/config/: middlewares.py  schema.py  settings.py  urls.py
backend/products/: admin.py  models.py  mutations.py  queries.py  schema.py  types.py  utils.py
backend/products/migrations/: 0001_initial.py  0002_auto_20210322_1702.py  0003_remove_category_brand.py
backend/users/: admin.py  models.py  mutations.py  queries.py  schema.py  types.py
backend/users/migrations/: 0001_initial.py
config/: settings.py
